feat: Add CalendarDateController for managing service calendar dates and add exception dates